removed repeated code and resolved warnings in each class